--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Ben's Raylib Games</h1>
     <ul>
         <li><a href="Chess/index.html">Play Chess</a></li>
-        <li><a href="connect4/index.html">Play Connect 4</a></li>
+        <li><a href="Connect%20Four/index.html">Play Connect 4</a></li>
         <li><a href="2048/index.html">Play 2048</a></li>
     </ul>
 </body>
