--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="Chess/index.html">Play Chess</a></li>
       <li><a href="ConnectFour/index.html">Play Connect 4</a></li>
       <li><a href="2048/index.html">Play 2048</a></li>
+        <li><a href="ProductivityTimer/index.html">Productivity Timer</a></li>
     </ul>
   </div>
 </body>
