--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="ConnectFour/index.html">Play Connect 4</a></li>
       <li><a href="2048/index.html">Play 2048</a></li>
         <li><a href="ProductivityTimer/index.html">Productivity Timer</a></li>
+        <li><a href="FakeOS/index.html">KS-OS</a></li>
     </ul>
   </div>
 </body>
