--- a/FakeOS/index.html
+++ b/FakeOS/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en-us">
   <head>
+  	<style>
+  	canvas { cursor: none; }
+	</style>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Emscripten-Generated Code</title>
